@@ -165,9 +165,6 @@ public abstract class HttpBase implements Protocol {
       if (code == 200) { // got a good response
         return new ProtocolOutput(c); // return it
         
-      } else if (code == 410) { // page is gone
-        return new ProtocolOutput(c, new ProtocolStatus(ProtocolStatus.GONE, "Http: " + code + " url=" + url));
-        
       } else if (code >= 300 && code < 400) { // handle redirect
         String location = response.getHeader("Location");
         // some broken servers, such as MS IIS, use lowercase header name...
@@ -206,7 +203,7 @@ public abstract class HttpBase implements Protocol {
       } else if (code == 404) {
         return new ProtocolOutput(c, new ProtocolStatus(ProtocolStatus.NOTFOUND, u));
       } else if (code == 410) { // permanently GONE
-        return new ProtocolOutput(c, new ProtocolStatus(ProtocolStatus.GONE, u));
+        return new ProtocolOutput(c, new ProtocolStatus(ProtocolStatus.GONE, "Http: " + code + " url=" + u));
       } else {
         return new ProtocolOutput(c, new ProtocolStatus(ProtocolStatus.EXCEPTION, "Http code=" + code + ", url="
                 + u));
