@@ -2,6 +2,8 @@ Nutch Change Log
 
 Nutch Current Development
 
+* NUTCH-1720 Duplicate lines in HttpBase.java (Walter Tietze via jnioche)
+
 * NUTCH-1750 Improvement of Fetcher's reportStatus (jnioche)
 
 * NUTCH-1747 Use AtomicInteger as semaphore in Fetcher (jnioche)
